compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__qualified_type_similar_type_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport wibble\nconst value: wibble.Int = 20\n"
---
----- SOURCE CODE
-- wibble.gleam
pub type Int

-- main.gleam

import wibble
const value: wibble.Int = 20


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:27
  │
3 │ const value: wibble.Int = 20
  │                           ^^

Expected type:

    wibble.Int

Found type:

    Int
